@@ -2,9 +2,10 @@ package OpenCloset::Constants::Category;
 
 use utf8;
 require Exporter;
-@ISA       = qw/Exporter/;
-@EXPORT    = qw/$BELT $BLOUSE $COAT $JACKET $ONEPIECE $PANTS $SHIRT $SHOES $SKIRT $TIE $WAISTCOAT $MISC/;
-@EXPORT_OK = qw/%LABEL_MAP %REVERSE_MAP %PRICE/;
+@ISA    = qw/Exporter/;
+@EXPORT = qw/$BELT $BLOUSE $COAT $JACKET $ONEPIECE $PANTS $SHIRT $SHOES $SKIRT $TIE $WAISTCOAT $MISC/;
+@EXPORT_OK =
+    qw/%LABEL_MAP %REVERSE_MAP %PRICE $LABEL_BELT $LABEL_BLOUSE $LABEL_COAT $LABEL_JACKET $LABEL_ONEPIECE $LABEL_PANTS $LABEL_SHIRT $LABEL_SHOES $LABEL_SKIRT $LABEL_TIE $LABEL_WAISTCOAT $LABEL_MISC/;
 
 our $BELT      = 'belt';
 our $BLOUSE    = 'blouse';
