@@ -1,3 +1,5 @@
+  - category 의 export 변수 추가
+
 v0.0.5    Fri, 20 May 2016 17:17:17 +0900
   - Export category hash MAPs
 
